Add CompactProof functionality
