# eapi/pb/eapi.pb.gw.go
@@ -288,6 +288,19 @@ func request_WAVE_Revoke_0(ctx context.Context, marshaler runtime.Marshaler, cli
 
 }
 
+func request_WAVE_CompactProof_0(ctx context.Context, marshaler runtime.Marshaler, client WAVEClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq CompactProofParams
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.CompactProof(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
 // RegisterWAVEHandlerFromEndpoint is same as RegisterWAVEHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
 func RegisterWAVEHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
@@ -906,6 +919,35 @@ func RegisterWAVEHandlerClient(ctx context.Context, mux *runtime.ServeMux, clien
 
 	})
 
+	mux.Handle("POST", pattern_WAVE_CompactProof_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		if cn, ok := w.(http.CloseNotifier); ok {
+			go func(done <-chan struct{}, closed <-chan bool) {
+				select {
+				case <-done:
+				case <-closed:
+					cancel()
+				}
+			}(ctx.Done(), cn.CloseNotify())
+		}
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_WAVE_CompactProof_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_WAVE_CompactProof_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -949,6 +991,8 @@ var (
 	pattern_WAVE_ResolveReverseName_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "ResolveReverseName"}, ""))
 
 	pattern_WAVE_Revoke_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "Revoke"}, ""))
+
+	pattern_WAVE_CompactProof_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "CompactProof"}, ""))
 )
 
 var (
@@ -991,4 +1035,6 @@ var (
 	forward_WAVE_ResolveReverseName_0 = runtime.ForwardResponseMessage
 
 	forward_WAVE_Revoke_0 = runtime.ForwardResponseMessage
+
+	forward_WAVE_CompactProof_0 = runtime.ForwardResponseMessage
 )
